# risc-v-sim

./: CMakeLists.txt  README.md  demo.c  demo.s  main.c
controller/: simulator.c  simulator.h
model/: memory.c  memory.h  processor.c  processor.h
model/components/: adder.c  adder.h  alu.c  alu.h  aluControl.c  aluControl.h  control.c  control.h  decoder.c  decoder.h  immediateModule.c  immediateModule.h  multiplexer.c  multiplexer.h  register.h  registerModule.c  registerModule.h
test/: test.c  test.h
utility/: byteHelper.c  byteHelper.h  conversionHelper.c  conversionHelper.h  outputHelper.c  outputHelper.h
